# -fl-2021-hse

./: .gitignore  1.md  2.cpp  2.md  3.md  CMakeLists.txt  DERIVATIVES.py  DERIVATIVES_2.py  Derivatives.cpp  Derivatives.hs  Derivatives.py  Derivatives_before_optimisation.cpp  Graph.cpp  Graph.hpp  HOMEWORK.md  HW.md  HW02.md  HW2 task3.l  LEXER.l  Makefile  My_language_1.txt  My_language_2.txt  My_language_3.txt  My_language_4.txt  My_language_5.txt  My_language_6.txt  Parser.ipynb  PythonParcer.py  PythonParcerUpdated.py  README.md  REPORT.md  Report  SOLUTION.md  TEST1  TEST2  TEST3  TEST4  Task1.md  With boosts(last version).cpp  Without boosts.cpp  (+159 more)
Automata/: file1.my  file2.my  file3.my  file4.my
DFA-parser/: main.cpp
Errors/: Err1  Err2  Err3  Err4  Err5  Err6  Err7
Tests/: test_2  test_2.1  test_2.2
expected/: expected1.txt  expected2.txt  expected3.txt  expected4.txt  expected5.txt
hw/: gram.ypp  lex.l  my.cpp  my.h  run.sh  test
hw04/: build.sh  flexer.l  parser.ypp  run.sh  run_tests.sh
lexer/: build.sh  example.txt  lexer.l
matcher/: matcher.py  matcher_test.py
parser_fast/: main.cpp  parser.cpp  parser.h  src
parser_slow/: main.cpp  parser.cpp  parser.h
programms/: a  automata  gram.dot  gram.output  gram.tab.cpp  gram.tab.hpp  gram.ypp  lex.yy.c  lex.yy.cc  lexer  lexer.l  out  test  tests
sample-tests/: sample-string1a.txt  sample-string1b.txt  sample-string1c.txt  sample-string2a.txt  (+14 more)
task2/slow_solution/: CMakeLists.txt
task2/slow_solution/include/: regular_parser.h
task2/slow_solution/src/: regular_parser_tests.cpp
(+320 files in other folders)
